tests/ui/associated-type-bounds/return-type-notation/return-type-notation-where-clause-doesnt-apply.stderr
error[E0046]: not all trait items implemented, missing: `func`
  --> $DIR/return-type-notation-where-clause-doesnt-apply.rs:10:1
   |
LL |     async fn func();
   |     ---------------- `func` from trait
...
LL | impl<T: Trait<func(..): Send>> Trait for T {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `func` in implementation

error[E0275]: overflow evaluating the requirement `impl Future<Output = ()> { <() as Trait>::func(..) } == _`
  --> $DIR/return-type-notation-where-clause-doesnt-apply.rs:16:5
   |
LL |     check(());
   |     ^^^^^^^^^
   |
note: required for `()` to implement `Trait`
  --> $DIR/return-type-notation-where-clause-doesnt-apply.rs:10:32
   |
LL | impl<T: Trait<func(..): Send>> Trait for T {}
   |                         ----   ^^^^^     ^
   |                         |
   |                         unsatisfied trait bound introduced here
   = note: 1 redundant requirement hidden
   = note: required for `()` to implement `Trait`
note: required by a bound in `check`
  --> $DIR/return-type-notation-where-clause-doesnt-apply.rs:13:18
   |
LL | fn check(_: impl Trait) {}
   |                  ^^^^^ required by this bound in `check`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0046, E0275.
For more information about an error, try `rustc --explain E0046`.
